Add contribution feed API
